@@ -1,3 +1,8 @@
+2011-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* stk500v2.c (stk500v2_command): Treat warnings as errors rather than
+	success.
+
 2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	bug #34027: avrdude AT90S1200 Problem (part 3 - documentation)
